--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     margin-bottom: 80px;
 }
 
-#title {
+#presentation #text-container #title {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
@@ -95,30 +95,35 @@
     white-space: nowrap;
 }
 
-.button-3:focus:not(:focus-visible):not(.focus-visible) {
-    box-shadow: none;
-    outline: none;
-}
-
 .button-3:hover {
-    background-color: #2c974b;
-}
-
-.button-3:focus {
-    box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
-    outline: none;
-}
-
-.button-3:disabled {
-    background-color: #94d3a2;
-    border-color: rgba(27, 31, 35, .1);
-    color: rgba(255, 255, 255, .8);
-    cursor: default;
-}
-
-.button-3:active {
-    background-color: #298e46;
-    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+    background-color: #2c66c2;
 }
 
 /* BUTTON END */
+
+#information-container #title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#information {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding-bottom: 100px;
+}
+
+.info {
+    max-width: 150px;
+    text-align: center;
+}
+
+#information img {
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+}
