--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    /*set the global fonts & made fits the backgrounds color in the corner*/
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -7,12 +6,10 @@
 }
 
 #top-container {
-    /*set the background color for the top of the webpage*/
     background-color: #1F2937;
 }
 
 #logo {
-    /*set the color & the font size for the "Header Logo" text*/
     color: #F9FAF8;
     font-size: 24px;
     font-weight: bolder;
@@ -59,18 +56,7 @@
     font-size: 18px;
 }
 
-/*.sign-up {
-    background-color: #3882F6;
-    font-size: 18px;
-    color: #E5E7EB;
-    font-weight: bolder;
-    padding: 8px;
-    border-radius: 25px;
-    padding: 10px;
-} */
-
 .button-3 {
-    /* BUTTON START */
     appearance: none;
     background-color: #3882F6;
     border: 1px solid rgba(27, 31, 35, .15);
@@ -99,8 +85,6 @@
     background-color: #2c66c2;
 }
 
-/* BUTTON END */
-
 #information-container #title {
     font-size: 36px;
     font-weight: bolder;
@@ -126,4 +110,27 @@
 #information img {
     border: 4px solid #3882F6;
     border-radius: 15px;
+}
+
+#quote-container {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    padding: 40px;
+}
+
+#quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+    max-width: 600px;
+}
+
+#author {
+    font-size: 18px;
+    font-weight: bolder;
+    text-align: end;
+    margin-right: 20px;
 }
