--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     font-size: 18px;
 }
 
-.button-3 {
+.button-top {
     appearance: none;
     background-color: #3882F6;
     border: 1px solid rgba(27, 31, 35, .15);
@@ -66,7 +66,6 @@
     color: #E5E7EB;
     cursor: pointer;
     display: inline-block;
-    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 14px;
     font-weight: 600;
     line-height: 20px;
@@ -81,7 +80,7 @@
     white-space: nowrap;
 }
 
-.button-3:hover {
+.button-top:hover {
     background-color: #2c66c2;
 }
 
@@ -105,6 +104,7 @@
 .info {
     max-width: 150px;
     text-align: center;
+    flex: auto;
 }
 
 #information img {
@@ -133,4 +133,62 @@
     font-weight: bolder;
     text-align: end;
     margin-right: 20px;
+}
+
+#call-to-action-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#blue-banner {
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 30px;
+    /*    padding-left: 200px;
+    padding-right: 200px;*/
+    align-content: space-around;
+    gap: 300px;
+    display: flex;
+}
+
+#call-to-action-container #text #title {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bolder;
+}
+
+#call-to-action-container #text #description {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.button-bottom {
+    appearance: none;
+    background-color: #3882F6;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #E5E7EB;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+    border: 2px solid #F9FAF8;
+}
+
+.button-bottom:hover {
+    background-color: #2c66c2;
 }
