--- a/style.css
+++ b/style.css
@@ -192,3 +192,15 @@
 .button-bottom:hover {
     background-color: #2c66c2;
 }
+
+#copyright-container {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: #1F2937;
+}
+
+#copyright-container #text {
+    color: #E5E7EB;
+    font-size: 18px;
+}
